--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-<h1>공 사 중</h1>
+<!DOCTYPE html>
+<html>
+    <head>
+        <link href="index.css" rel="stylesheet">
+        <meta charset="utf-8">
+        <title>공사중</title>
+        <link rel="icon" href="./images/favicon.png">
+        <script src="./scripts/index.js"></script>
+    </head>
+    <body>
+        <h1>공 사 중</h1>
+    </body>
+ 
+</html>
